--- a/package.json
+++ b/package.json
@@ -7,14 +7,19 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.5",
     "@mui/material": "^7.3.5",
+    "@mui/x-charts": "^8.17.0",
+    "@mui/x-data-grid": "^8.17.0",
+    "@mui/x-data-grid-generator": "^8.17.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.13.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-input-mask": "^2.0.4",
     "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
+    "recharts": "^3.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
