--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@mui/x-charts": "^8.17.0",
     "@mui/x-data-grid": "^8.17.0",
     "@mui/x-data-grid-generator": "^8.17.0",
+    "@mui/x-date-pickers": "^8.17.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.13.2",
+    "dayjs": "^1.11.19",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-input-mask": "^2.0.4",
